# palladio

./: .gitignore  .project  Jenkinsfile  LICENSE  README.md  _config.yml  index.md  pipeline.groovy  requirements.txt  version.json  version.txt
conan/cesdk/: conanfile.py
conan/houdini/: conanfile.py
conan/profiles/: linux-gcc112  linux-gcc48  linux-gcc63  linux-gcc93  windows-v140  windows-v141  windows-v142  windows-v143
deploy/: build.py  installer_config.json  palladio.json
deploy/resources/: license.rtf
deploy/templates/: deployment.properties.in  palladio.wxs.in  palladio_directory.in  palladio_feature.in  palladio_registry_search.in
doc/: BUILD.md  CHANGELOG.md  build.md  changelog.md  examples.md  usage.md
doc/data/: heightExtrude.rpk  parthenon.rpk
prt4houdini/: .gitignore  build.bat  build.sh  common.cmake
prt4houdini/client/src/: .gitignore  CMakeLists.txt  Makefile.houdini.in  Makefile.houdini.in.gnu  Makefile.houdini.in.nmake  SOP_prt4houdini.cpp  SOP_prt4houdini.h  logging.h  utils.cpp  utils.h
prt4houdini/cmake/: common.cmake  utils.cmake
prt4houdini/codec/src/: CMakeLists.txt  exportConfig.cmake.in  houdini.cpp
prt4houdini/codec/src/encoder/: HoudiniCallbacks.h  HoudiniEncoder.cpp  HoudiniEncoder.h
prt4houdini/conan/cesdk/: conanfile.py
prt4houdini/conan/houdini/: conanfile.py
prt4houdini/src/: CMakeLists.txt  conanfile.txt
prt4houdini/src/client/: CMakeLists.txt  InitialShapeContext.cpp  InitialShapeContext.h  InitialShapeGenerator.cpp  InitialShapeGenerator.h  Makefile.houdini.in.gnu  Makefile.houdini.in.nmake  PRTContext.cpp  PRTContext.h  SOPAssign.cpp  SOPAssign.h  SOPGenerate.cpp  SOPGenerate.h  SOP_prt4houdini.cpp  SOP_prt4houdini.h  callbacks.cpp  callbacks.h  initialshape.cpp  initialshape.h  logging.h  parameter.cpp  parameter.h  shapegen.cpp  shapegen.h  sop.cpp  sop.h  utils.cpp  utils.h
prt4houdini/src/cmake/: common.cmake
prt4houdini/src/cmake/conan/cesdk/: conanfile.py
prt4houdini/src/cmake/conan/houdini/: conanfile.py
prt4houdini/src/codec/: CMakeLists.txt  houdini.cpp  houdini.h
prt4houdini/src/codec/encoder/: HoudiniCallbacks.h  HoudiniEncoder.cpp  HoudiniEncoder.h
prt4houdini/src/test/: tests.cpp
src/: CMakeLists.txt  Pipfile  conanfile-h16.py  conanfile-h17.py  conanfile-h175.py  conanfile-h180.py  conanfile-h185.py  conanfile-h190.py  conanfile-h195.py  conanfile-h200.py  conanfile.py  conanfile.txt  dependencies.cmake  palladio.json
src/client/: AttrEvalCallbacks.cpp  AttrEvalCallbacks.h  AttributeConversion.cpp  AttributeConversion.h  CMakeLists.txt  InitialShapeContext.cpp  InitialShapeGenerator.cpp  InitialShapeGenerator.h  LRUCache.h  LogHandler.h  ModelConverter.cpp  ModelConverter.h  MultiWatch.cpp  NodeParameter.cpp  NodeParameter.h  PRTContext.cpp  PRTContext.h  PrimitiveClassifier.cpp  PrimitiveClassifier.h  PrimitivePartition.cpp  PrimitivePartition.h  SOPAssign.cpp  SOPAssign.h  SOPGenerate.cpp  SOPGenerate.h  ShapeConverter.cpp  ShapeConverter.h  ShapeData.cpp  ShapeData.h  ShapeGenerator.cpp  ShapeGenerator.h  callbacks.cpp  callbacks.h  logging.h  main.cpp  parameter.cpp  utils.cpp  utils.h
src/cmake/: common.cmake  dependencies.cmake  installation.cmake  packaging.cmake  utils.cmake  versioning.cmake
src/codec/: CMakeLists.txt  CodecMain.cpp  CodecMain.h  houdini.cpp  houdini.h
src/codec/encoder/: HoudiniCallbacks.h  HoudiniEncoder.cpp  HoudiniEncoder.h
src/palladio/: AnnotationParsing.cpp  AnnotationParsing.h  AttrEvalCallbacks.cpp  AttrEvalCallbacks.h  AttributeConversion.cpp  AttributeConversion.h  BoostRedirect.h  CMakeLists.txt  HoudiniNodesMain.cpp  LRUCache.h  LogHandler.cpp  LogHandler.h  ModelConverter.cpp  ModelConverter.h  MultiWatch.cpp  MultiWatch.h  NodeParameter.cpp  NodeParameter.h  NodeSpareParameter.cpp  NodeSpareParameter.h  PRTContext.cpp  PRTContext.h  PalladioMain.cpp  PalladioMain.h  PrimitiveClassifier.cpp  PrimitiveClassifier.h  PrimitivePartition.cpp  PrimitivePartition.h  ResolveMapCache.cpp  ResolveMapCache.h  RuleAttributes.cpp  RuleAttributes.h  SOPAssign.cpp  SOPAssign.h  SOPGenerate.cpp  SOPGenerate.h  ShapeConverter.cpp  ShapeConverter.h  ShapeData.cpp  ShapeData.h  (+4 more)
src/palladio_fs/: CMakeLists.txt  RulePackageFS.cpp  RulePackageFS.h  main.cpp
src/test/: CMakeLists.txt  TestCallbacks.h  TestUtils.cpp  TestUtils.h  tests.cpp
src/test/data/: GenAttrs1.rpk  quad1.mtl  uvsets.rpk
src/test/data/holes/: do_cleanup.rpk  example_bad_triang.usdexport1.usd
testdata/: candler.rpk  extrude.hipnc  extrude_color2.rpk  grouptest.hipnc  simpletest.hipnc
testdata/hda/: ce_node_ui.hdanc
testdata/hip/: testPolygonHoles.hipnc  testShapeGranularity01.hipnc  testShapeGranularity02.hipnc  testTexturedCandler.hipnc  testTexturedCube.hipnc
testdata/hip/old/: SebHomeWork.hip  grouptest.hipnc  multiple.hipnc
testdata/rpk/: Candler_Building.rpk  extrude.rpk  extrude_color.rpk  hdn2.rpk  texCube.rpk
